# Fix-Last-Time

./: .gitignore  .replit  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--3-Stash-YOUR-settings-json-pull-then-restore-it-git-st_1779558910413.txt  Pasted--LIVE-Mainnet-every-order-uses-real-money-on-api-binanc_1779476991672.txt  Pasted--LIVE-Mainnet-every-order-uses-real-money-on-api-binanc_1779477601466.txt  Pasted--SYSTEM-TYPE--1780406175587_1780406175590.txt  Pasted--SYSTEM-TYPE--1780420826107_1780420826110.txt  Pasted--System-restart-required-Last-login-Thu-May-21-20-44-53_1779397569854.txt  Pasted--System-restart-required-Last-login-Thu-May-28-09-29-59_1779957163905.txt  Pasted--pull-and-verify-git-pull-git-log-oneline-5-ls-la-tradi_1779827871815.txt  Pasted--rw-1-root-root-159-May-23-19-19-root-trading-bot-clean_1779560511957.txt  Pasted--trading-dashboard-py-131--1779464710678_1779464710679.txt  Pasted--venv-root-AlphaTrade-bot-trading-bot-clean-trading-gre_1779875783401.txt  Pasted--verify-sleep-2-tail-n-20-alphatrade-log-remote-Enumera_1779480452561.txt  Pasted--workspace-git-stash-push-m-local-settings-trading-data_1779916267715.txt  Pasted--workspace-git-stash-push-m-local-settings-trading-data_1779917259024.txt  Pasted-BUILD-A-PROFESSIONAL-CRYPTO-SCALPING-BOT-HYBRID-AI-RULE_1779997150849.txt  Pasted-FINAL-ALPHATRADE-REQUIREMENT-EXACT-VERSION-Do-NOT-rebui_1780908042993.txt  Pasted-FINAL-NEXT-LEVEL-PLAN-DO-NOT-CODE-RANDOMLY-Important-Be_1779915071271.txt  (+32 more)
trading/: .gitignore  PROJECT_REPORT.md  bot.py  (+27 more)
(+234 files in other folders)
